--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,7 @@
 <h1>My Tasks</h1>
+
+<ul>
+  <% @tasks.each do |task| %>
+    <li><%= task.completed ? '☑' : '☐' %> <%= task.title %></li>
+  <% end %>
+</ul>
