--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @tasks.each do |task| %>
-    <li><%= task.completed ? '☑' : '☐' %> <%= task.title %></li>
+    <li><%= task.completed ? '☑' : '☐' %> <%= link_to task.title, task_path(task) %></li>
   <% end %>
 </ul>
