--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,3 +5,5 @@
     <li><%= task.completed ? '☑' : '☐' %> <%= link_to task.title, task_path(task) %></li>
   <% end %>
 </ul>
+
+<h4><%= link_to "+ add a new task", tasks_new_path %></h4>
