--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,6 +3,8 @@
 
 <h3><%= @task.details %></h3>
 
-<p><%= @task.completed ? '☑ This task is completed' : '☐ This task is not completed' %></p>
+<p>
+  <%= @task.completed ? '☑ This task is completed' : '☐ This task is not completed' %>
+</p>
 
 <%= link_to "Back to all my tasks", tasks_path %>
